test/visibility/import/unqualified-access-no-bleed.good
unqualified-access-no-bleed.chpl:8: In function 'main':
unqualified-access-no-bleed.chpl:9: error: 'y' undeclared (first use this function)
